...
import { TextInput, useTheme } from 'react-native-paper'

type Props = NativeStackScreenProps<RootStackParamList, 'CreateLabel'>

export default function CreateLabel({ route }: Props) {
  const { tag } = route.params
  const labels = useAppSelector(state => state.favorites.labels)
  const navigation = useNavigation()
  const [draft, setDraft] = useState('')
  const dispatch = useAppDispatch()
  const theme = useTheme()
  const inputRef = useRef<RNTextInput>(null)

...
