...
// Define the initial state using that type
export const initialState: RandomState = {
  loadingState: LoadingState.idle,
}

export const randomSlice = createSlice({
  name: 'random',
  // `createSlice` will infer the state type from the `initialState` argument
  initialState,
  reducers: {
    reset: state => {
      state.randomTag = undefined
      state.loadingState = LoadingState.idle
...
