...
        <Tab.Screen
          name="HomeNavigator"
          component={HomeNavigator}
          options={{
            title: 'home',
            tabBarIcon: HomeIcon,
            tabBarAccessibilityLabel: 'tab_home',
          }}
        />
        <Tab.Screen
          name="Search"
          component={SearchScreen}
          options={{
            title: 'search',
            tabBarIcon: SearchIcon,
            tabBarAccessibilityLabel: 'tab_search',
          }}
        />
        <Tab.Screen
          name="Favorites"
          component={FavoritesScreen}
          options={{
...
