...
          labelStyle={[
            theme.fonts.bodyLarge,
            styles.compactSearchLabel,
            { color: theme.colors.secondary },
          ]}
        >
          {'new search'}
        </Button>
      </View>
      <Snackbar
        visible={loadingState === LoadingState.failed}
        onDismiss={setIdle}
        onIconPress={setIdle}
...
